# ld55-necromatcher

./: Cargo.toml  LICENSE  README.md  bad_graphics.aseprite
.github/workflows/: ci.yaml  release.yaml
client/: Cargo.toml
client/src/: audio.rs  core.rs  graphics.rs  input.rs  main.rs  ui.rs
client/src/core/: colours.rs  event.rs  state.rs  utils.rs
client/src/core/state/: event_handler.rs  game_event_handler.rs  level_loader.rs  side_effects.rs
client/src/graphics/: hover_state.rs
docs/: 000_brainstorming.md  001_todo.todo  003_combat_system.md
levels/: level1.txt  level2.txt  level3.txt  level4.txt  tutorial.txt  tutorial_02.txt
src/: animation.rs  audio.rs  graphics.rs  loaders.rs  main.rs  ui.rs
src/core/state/: level_loader.rs  side_effects.rs
src/graphics/: piece_visualisation.rs
wasm/: restart-audio-context.js
