[workspace]
resolver =  "2"
members = [ 
    "client",
]

[workspace.dependencies]
anyhow = "1.0.81"
rand = "0.8.5"
rand_chacha = "0.3.1"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3