[package]
name = "ld55"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
built = { version = "0.7", features = ["git2"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
bevy = "0.13"
bevy_vector_shapes = "0.7"
